# raikou-rs

./: .gitignore  AGENTS.md  Cargo.toml  plan.md  plan2.md
crates/raikou-core/: Cargo.toml
crates/raikou-core/src/: geometry.rs  ids.rs  lib.rs  paint_types.rs  text.rs
crates/raikou-layout/: Cargo.toml
crates/raikou-layout/src/: alignment.rs  attached.rs  constraints.rs  layout_manager.rs  layoutable.rs  lib.rs  paint_engine.rs  rounding.rs  text_block.rs  text_box.rs  text_measure_cache.rs
crates/raikou-layout/src/panels/: canvas.rs  dock_panel.rs  grid.rs  items_host.rs  mod.rs  overlay_layer.rs  panel.rs  scroll_content_presenter.rs  stack_panel.rs  wrap_panel.rs
crates/raikou-layout/tests/: arrange_core.rs  canvas.rs  dock_panel.rs  grid.rs  invalidation.rs  layout_manager.rs  measure_core.rs  overlay_layer.rs  paint_engine.rs  panel.rs  rounding.rs  snapshots.rs  stack_panel.rs  support_hosts.rs  text_block.rs  text_box.rs  wrap_panel.rs
crates/raikou-layout/tests/support/: mod.rs
crates/raikou-skia/: Cargo.toml
crates/raikou-skia/src/: backend.rs  error.rs  frame.rs  image.rs  lib.rs  painter.rs  surface.rs  text.rs
crates/raikou-text/: Cargo.toml
crates/raikou-text/src/: buffer.rs  font.rs  layout.rs  lib.rs
crates/raikou-widgets/: Cargo.toml
crates/raikou-widgets/src/: lib.rs
crates/raikou-widgets/tests/: widget_tree.rs
crates/raikou-window/: Cargo.toml
crates/raikou-window/src/: accessibility.rs  clipboard.rs  config.rs  error.rs  events.rs  lib.rs  runtime.rs  window.rs
crates/raikou-window/tests/: config_defaults.rs  event_translation.rs
examples/: layout_demo.rs  skia.rs  text_editor.rs  winit.rs
