[package]
name = "raikou-skia"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
raikou-core.workspace = true
raikou-text.workspace = true
raw-window-handle.workspace = true
skia-safe.workspace = true
thiserror.workspace = true
tracing.workspace = true
winit.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "=0.6.4", default-features = false }
objc2-app-kit = { version = "=0.3.2", default-features = false, features = ["objc2-quartz-core", "NSView", "NSResponder"] }
objc2-core-foundation = { version = "=0.3.2", default-features = false }
objc2-metal = { version = "=0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat", "MTLDevice"] }
objc2-quartz-core = { version = "=0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CALayer", "CAMetalLayer"] }