[package]
name = "raikou-widgets"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
raikou-core.workspace = true
raikou-layout.workspace = true
raikou-text.workspace = true
raikou-window.workspace = true
raikou-skia.workspace = true

[dev-dependencies]
skia-safe.workspace = true
